--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,6 +1,7 @@
 .container {
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 .content {
   height: 100%;
